feat: add plan and scan services
